examples/basic/index.scss
// Typical settings for all charts

.time-axis-x {
  .line {
    stroke: grey;
  }
  .tick {
    stroke: grey;
  }
}

.axis-y {
  .line {
    stroke: grey;
  }
  .tick {
    stroke: grey;
  }
}

// Typical settings for our specific chart

.chart {
  max-width: 1332px;

  .some-y-axis {
    .title tspan {
      fill: green;
      font-size: larger;
    }
  }

  circle {
    fill: green;
  }

  .horizontal-series.some-series {
    stroke: green;
    stroke-width: 2px;

    text {
      stroke: none;
      stroke-width: 1px;
    }
  }
}

